<resources>
    <string name="app_name">ITDESK2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hom">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="chooseList">choose list</string>
    <string name="playlist">playlist</string>
    <string name="a_z">A-Z</string>
    <string name="deletefrom">Delete from list</string>
    <string name="add_to_list">Add to list...</string>
    <string name="delete_list">Delete list</string>
    <string name="add_new">add new ...</string>
    <string name="artist_songname">artist - songname</string>
</resources>