<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">
    <!-- Jest to layout w krorym wyswietlamy liste playlist -->
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="0.1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/playlist" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            android:text="@string/add_new"
            android:textColor="@color/black">
        </Button>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <!-- Jest to layout ktory bedziemy ukrywac dajac jej vibility gone -->
        <!-- Kiedy klikniemy w element na liscie -->
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3" >
        <LinearLayout
            android:id="@+id/LayoutPlaylist"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:visibility="visible">
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_list"
                android:textColor="@color/purple_500"
                app:backgroundTint="@color/white"
                tools:ignore="NestedWeights"
                android:layout_gravity="center"/>



        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
</LinearLayout>
