<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <!-- Jest to layout w krorym wyswietlamy liste piosenek -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/playlist" />
            <SearchView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.8">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />


        </LinearLayout>
        <!-- Sa to layouty ktore bedziemy na zmiane ukrywac i pokazywac -->
        <!-- Kiedy klikamy w jakis element w liscie -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >
            <LinearLayout
                android:id="@+id/LayoutListPlayer"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/a_z"
                    android:textColor="@color/purple_500"
                    app:backgroundTint="@color/white"
                    tools:ignore="NestedWeights" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@android:drawable/ic_media_previous" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@android:drawable/ic_media_play" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="TODO"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:srcCompat="@android:drawable/ic_media_next" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="⇆"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white" />
                <!--Trzeba zamiast tekstu dac obrazek bo standard utf8 nie pozwala na wyslwielanie takiego textu -->

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LayoutListChooseAction"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="3"
                android:visibility="gone">
                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deletefrom"
                    android:textColor="@color/purple_500"
                    app:backgroundTint="@color/white"
                    tools:ignore="NestedWeights"
                    android:layout_gravity="center"/>


                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white"
                    android:text="@string/add_to_list"
                    android:layout_gravity="center"/>
                <!--Trzeba zamiast tekstu dac obrazek bo standard utf8 nie pozwala na wyslwielanie takiego textu -->

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>